--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,5 @@
 @import "normalize.less";
+@import "variables.less";
+@import "blocks/page-header.less";
+@import "mixins.less";
+@import "main-nav.less";
