--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,4 +2,5 @@
 @import "variables.less";
 @import "blocks/page-header.less";
 @import "mixins.less";
-@import "main-nav.less";
+@import "blocks/main-nav.less";
+@import "blocks/welcome.less";
