--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -10,3 +10,10 @@
 background-color: @blackHead;
 color: @white;
 }
+
+.main-nav__toggle {
+  color: @white;
+  background-image: url(../../img/icon-menu-cross.svg);
+  background-repeat: no-repeat;
+  background-color: @blackHead;
+}
