--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,6 +2,7 @@
 @import "variables.less";
 @import "blocks/page-header.less";
 @import "mixins.less";
+@import "blocks/page-header.less";
 @import "blocks/main-nav.less";
 @import "blocks/welcome.less";
 @import "blocks/advantages.less";
