начал стилизацию страницы с фото в less

--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -6,3 +6,19 @@
 .uppercase {
   text-transform: uppercase;
 }
+
+.intro-font {
+  font-size: 24px;
+  font-weight: 300;
+  line-height: normal;
+  text-align: center;
+  color: @white;
+}
+
+.subtitle-font {
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 2.14;
+  text-align: center;
+  color: @dark;
+}
