--- a/source/less/style.less
+++ b/source/less/style.less
@@ -6,3 +6,4 @@
 @import "blocks/main-nav.less";
 @import "blocks/welcome.less";
 @import "blocks/advantages.less";
+@import "blocks/user-photos.less";
