photos main done

--- a/source/less/blocks/user-photos.less
+++ b/source/less/blocks/user-photos.less
@@ -14,3 +14,28 @@
 .user-photos__list {
   list-style: none;
 }
+
+.user_photos__text {
+  font-size: 14px;
+  text-align: left;
+  line-height: 24px;
+  color: @dark;
+}
+
+.user-photos__author-name {
+  font-size: 14px;
+  text-align: left;
+  line-height: 24px;
+  font-weight: bold;
+  color: @dark;
+}
+
+.user-photos__time {
+  font-weight: 300;
+  font-size: 12px;
+  .uppercase;
+}
+
+.user-photos__like {
+  color: @lipstick;
+}
