начало стилизации в лесс готово

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,3 +7,4 @@
 @import "blocks/welcome.less";
 @import "blocks/advantages.less";
 @import "blocks/user-photos.less";
+@import "blocks/copyright.less";
