npm test errors in less files fixed

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -12,20 +12,19 @@
 .advantages__list {
   .unstyle;
   text-align: center;
-  background-image: url(../../img/bg-triangle-white.svg);
+  background-image: url("../../img/bg-triangle-white.svg");
   background-repeat: no-repeat;
   background-color: @lightGrey;
 }
 
 .advantages__title {
-color: @blackHead;
-font-size: 18px;
-line-height: 24px;
+  color: @blackHead;
+  font-size: 18px;
+  line-height: 24px;
 }
 
 .advantages__item {
-font-size: 14px;
-line-height: 24px;
-color: @dark;
-
+  font-size: 14px;
+  line-height: 24px;
+  color: @dark;
 }
