--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -7,13 +7,13 @@
 
 .main-nav,
 .main-nav a {
-background-color: @blackHead;
-color: @white;
+  background-color: @blackHead;
+  color: @white;
 }
 
 .main-nav__toggle {
   color: @white;
-  background-image: url(../../img/icon-menu-cross.svg);
+  background-image: url("../../img/icon-menu-cross.svg");
   background-repeat: no-repeat;
   background-color: @blackHead;
 }
