--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -1,6 +1,6 @@
 .welcome {
   background-color: @blackHead;
-  background-image: url(../../img/bg-back-mobile@1x.jpg);
+  background-image: url("../../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
 }
 
