@blackHead renamed to @black

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -7,7 +7,7 @@
 
 .main-nav,
 .main-nav a {
-  background-color: @blackHead;
+  background-color: @black;
   color: @white;
 }
 
@@ -15,5 +15,5 @@
   color: @white;
   background-image: url("../../img/icon-menu-cross.svg");
   background-repeat: no-repeat;
-  background-color: @blackHead;
+  background-color: @black;
 }
