--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -1,5 +1,5 @@
 .welcome {
-  background-color: @blackHead;
+  background-color: @black;
   background-image: url("../../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
 }
@@ -9,12 +9,12 @@
 }
 
 .download-app {
-  background-color: @blackHead;
+  background-color: @black;
 }
 
 .download-app__download {
   color: @white;
-  background-color: @blackHead;
+  background-color: @black;
   font-weight: bold;
   line-height: 1;
   text-align: center;
