Mixins brackets added

--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -1,13 +1,13 @@
-.unstyle {
+.unstyle() {
   list-style: none;
   text-decoration: none;
 }
 
-.uppercase {
+.uppercase() {
   text-transform: uppercase;
 }
 
-.intro-font {
+.intro-font() {
   font-size: 24px;
   font-weight: 300;
   line-height: normal;
@@ -15,7 +15,7 @@
   color: @white;
 }
 
-.subtitle-font {
+.subtitle-font() {
   font-size: 14px;
   font-weight: normal;
   line-height: 2.14;
