--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,3 +7,5 @@
 @import "blocks/advantages.less";
 @import "blocks/user-photos.less";
 @import "blocks/copyright.less";
+@import "outlines.less";
+@import "basis.less";
