--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,3 +1,21 @@
+.main-nav {
+  width: 320px;
+  min-height: 296px; //временно
+  margin: 0 auto;
+}
+
+@media (min-width: 768px) {
+  .main-nav {
+    min-height: 335px; //временно
+  }
+}
+
+@media (min-width: 1200px) {
+  .main-nav {
+    min-height: 110px; //временно
+  }
+}
+
 .main-nav__list,
 .main-nav__list a {
   font-size: 18px;
@@ -7,7 +25,7 @@
 
 .main-nav,
 .main-nav a {
-  background-color: @black;
+  // background-color: @black; коммент для сетки
   color: @white;
 }
 
@@ -15,5 +33,5 @@
   color: @white;
   background-image: url("../../img/icon-menu-cross.svg");
   background-repeat: no-repeat;
-  background-color: @black;
+  // background-color: @black;  коммент для сетки
 }
