--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,18 +1,20 @@
 .main-nav {
   width: 320px;
-  min-height: 296px; //временно
-  margin: 0 auto;
+  min-height: 254px; //временно
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tabletwidth) {
   .main-nav {
-    min-height: 335px; //временно
+    min-height: 252px; //временно
+    width: 660px;
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: @desktopwidth) {
   .main-nav {
     min-height: 110px; //временно
+    margin-left: 50px;
+    width: 720px;
   }
 }
 
