--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,4 +1,29 @@
 .page-header {
   // background-color: @black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
+.page-header__logo {
+  width: 320px;
+  height: 69px;
+}
+
+@media (min-width: @tabletwidth) {
+  .page-header__logo {
+  width: 660px;
+  height: 110px;
+  }
+}
+
+@media (min-width: @desktopwidth) {
+  .page-header{
+    flex-direction: row;
+    justify-content: center;
+  }
+  .page-header__logo {
+    height: 110px;
+    width: 230px;
+  }
+}
