--- a/source/less/outlines.less
+++ b/source/less/outlines.less
@@ -3,7 +3,8 @@
 .page-header { outline: chartreuse 3px solid; }
 .body { outline: white 3px solid; }
 .page-header__logo { outline: blue 3px solid; }
-
+.page-main { outline: red 3px dotted; }
+.welcome { outline: brown 2px dotted; }
 // фон
 body {
   background: #292929 url("../img/index-mobile.jpg") no-repeat 50% 0;
