--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,5 +1,6 @@
 .advantages {
-  background-color: @white;
+  //background-color: @white; временно
+  min-height: 1010px;//временно для сетки
 }
 
 .advantages__slogan {
@@ -12,9 +13,10 @@
 .advantages__list {
   .unstyle;
   text-align: center;
-  background-image: url("../../img/bg-triangle-white.svg");
-  background-repeat: no-repeat;
-  background-color: @lightGrey;
+  margin: 0;
+  // background-image: url("../../img/bg-triangle-white.svg"); временно
+  // background-repeat: no-repeat;
+  // background-color: @lightGrey;
 }
 
 .advantages__title {
