--- a/source/less/outlines.less
+++ b/source/less/outlines.less
@@ -5,6 +5,7 @@
 .page-header__logo { outline: blue 3px solid; }
 .page-main { outline: red 3px dotted; }
 .welcome { outline: brown 2px dotted; }
+.advantages { outline: purple 3px dashed };
 // фон
 body {
   background: #292929 url("../img/index-mobile.jpg") no-repeat 50% 0;
