Advantages slogan spans added, selector correction

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -8,6 +8,8 @@
   line-height: normal;
   text-align: center;
   color: @dark;
+  width: 320px;
+  min-height: 220px; //для сетки
 }
 
 .advantages__list {
