--- a/source/less/outlines.less
+++ b/source/less/outlines.less
@@ -6,6 +6,7 @@
 .page-main { outline: red 3px dotted; }
 .welcome { outline: brown 2px dotted; }
 .advantages { outline: purple 3px dashed };
+.advantages__slogan {outline: green 2px dashed };
 // фон
 body {
   background: #292929 url("../img/index-mobile.jpg") no-repeat 50% 0;
