--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -8,8 +8,32 @@
   line-height: normal;
   text-align: center;
   color: @dark;
-  width: 320px;
-  min-height: 220px; //для сетки
+  width: 260px;
+  min-height: 150px; //для сетки
+  margin: 0 auto;
+  padding-top: 40px;
+  padding-bottom: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+@media (min-width: @tabletwidth) {
+  .advantages__slogan {
+    width: 600px;
+    min-height: 170px;// для сетки
+  }
+}
+
+@media (min-width: @desktopwidth) {
+  .advantages__slogan {
+    width: 1140px;
+    min-height: 255px;// для сетки
+  }
+}
+
+.advantages__slogan--question,
+.advantages__slogan--question {
+  display: block;
 }
 
 .advantages__list {
