--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -39,11 +39,17 @@
 .advantages__list {
   .unstyle;
   text-align: center;
-  margin: 0;
+  margin: 0 auto;
+  padding: 0;
+  width: 320px;
+  min-height: 790px;//временно для сетки
   // background-image: url("../../img/bg-triangle-white.svg"); временно
   // background-repeat: no-repeat;
   // background-color: @lightGrey;
+  display: flex;
+  flex-direction: column;
 }
+
 
 .advantages__title {
   color: @black;
@@ -52,6 +58,8 @@
 }
 
 .advantages__item {
+  width: 320px;//временно
+  min-height: 130px; //временно для сетки
   font-size: 14px;
   line-height: 24px;
   color: @dark;
