--- a/source/less/outlines.less
+++ b/source/less/outlines.less
@@ -7,6 +7,8 @@
 .welcome { outline: brown 2px dotted; }
 .advantages { outline: purple 3px dashed };
 .advantages__slogan {outline: green 2px dashed };
+.advantages__list { outline: hotpink 1px dotted};
+.advantages__item { outline: blue 2px solid};
 // фон
 body {
   background: #292929 url("../img/index-mobile.jpg") no-repeat 50% 0;
