--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -72,12 +72,40 @@
 
 @media (min-width: @tabletwidth) {
   .advantages__list {
-  width: 620px;//временно
-  min-height: 1024px; //временно для сетки
-  align-items: flex-end;
+    width: 620px;//временно
+    min-height: 850px; //временно для сетки
+    align-items: flex-end;
   }
+
   .advantages__item {
-  width: 320px;//временно
-  min-height: 140px; //временно для сетки
+    width: 320px;//временно
+    min-height: 140px; //временно для сетки
+  }
+
+  .advantages__item:last-child {
+    display: block;
+    margin-top: auto;
+  }
+}
+
+@media (min-width: @desktopwidth) {
+  .advantages__list {
+    width: 940px;//временно
+    min-height: 1050px; //временно для сетки
+    flex-direction: row;
+    padding-left: 10px;
+    padding-right: 10px;
+    align-items: flex-end;
+    flex-wrap: wrap;
+  }
+
+  .advantages__item {
+    width: 270px;//временно
+    min-height: 230px; //временно для сетки
+  }
+
+  .advantages__item:last-child {
+    display: block;
+    margin-left: auto;
   }
 }
