--- a/source/less/outlines.less
+++ b/source/less/outlines.less
@@ -1,7 +1,6 @@
 // подсветка блоков
 .main-nav { outline: yellow 3px solid; }
 .page-header { outline: chartreuse 3px solid; }
-.body { outline: white 3px solid; }
 .page-header__logo { outline: blue 3px solid; }
 .page-main { outline: red 3px dotted; }
 .welcome { outline: brown 2px dotted; }
@@ -11,19 +10,19 @@
 .advantages__item { outline: blue 2px solid};
 // фон
 body {
-  background: #292929 url("../img/index-mobile.jpg") no-repeat 50% 0;
+  background: #292929 url("../img/photo-mobile.jpg") no-repeat 50% 0;
   background-size: 320px auto;
   min-height: 750px;
 }
 @media (min-width: @tabletwidth) {
   body {
-    background: #292929 url("../img/index-tablet.jpg") no-repeat 50% 0;
+    background: #292929 url("../img/photo-tablet.jpg") no-repeat 50% 0;
     background-size: 660px auto;
   }
 }
 @media (min-width: @desktopwidth) {
   body {
-    background: #292929 url("../img/index-desktop.jpg") no-repeat 50% 0;
+    background: #292929 url("../img/photo-desktop.jpg") no-repeat 50% 0;
     background-size: 1200px auto;
   }
 }
