--- a/source/less/blocks/user-photos.less
+++ b/source/less/blocks/user-photos.less
@@ -1,18 +1,50 @@
 .user-photos {
-  background-image: url("../../img/bg-back-mobile@1x.jpg");
-  background-repeat: no-repeat;
+  width: 320px;
+  min-height: 3220px;//grid-temp
+  margin: 0 auto;
+  //background-image: url("../../img/bg-back-mobile@1x.jpg"); //disabled for grid
+  //background-repeat: no-repeat;
 }
 
 .user-photos__title {
   .intro-font;
+  min-height: 110px;//grid-temp
+}
+
+.user-photos__title,
+.user-photos__subtitle {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0;
 }
 
 .user-photos__subtitle {
   .subtitle-font;
+  min-height: 125px;//grid-temp
+}
+
+@media (min-width: @tabletwidth) {
+  .user-photos {
+    width: 660px;
+    min-height: 2640px;//grid-temp
+  }
+  .user-photos__title {
+    min-height: 270px;//grid-temp
+  }
+  .user-photos__subtitle {
+    min-height: 170px;//grid-temp
+  }
+}
+
+@media (min-width: @desktopwidth) {
+
 }
 
 .user-photos__list {
-  list-style: none;
+  .unstyle;
+  margin: 0;
 }
 
 .user_photos__text {
