--- a/source/less/outlines.less
+++ b/source/less/outlines.less
@@ -8,6 +8,12 @@
 .advantages__slogan {outline: green 2px dashed };
 .advantages__list { outline: hotpink 2px dotted};
 .advantages__item { outline: blue 2px solid};
+.user-photos { outline: brown 2px dotted; };
+.user-photos__title { outline: purple 3px dashed };
+.user-photos__subtitle {outline: green 2px dashed };
+.user-photos__list { outline: hotpink 2px dotted};
+.user-photos__item { outline: blue 2px solid};
+
 // фон
 body {
   background: #292929 url("../img/photo-mobile.jpg") no-repeat 50% 0;
