--- a/source/less/outlines.less
+++ b/source/less/outlines.less
@@ -13,6 +13,10 @@
 .user-photos__subtitle {outline: green 2px dashed };
 .user-photos__list { outline: hotpink 2px dotted};
 .user-photos__item { outline: blue 2px solid};
+.page-footer { outline: yellow 3px solid; };
+.page-footer__logo { outline: red 3px dotted; };
+.page-footer__social {outline: green 2px dashed };
+.page-footer__copyright { outline: purple 3px dashed };
 
 // фон
 body {
