--- a/source/less/style.less
+++ b/source/less/style.less
@@ -10,3 +10,6 @@
 @import "outlines.less";
 @import "basis.less";
 @import "blocks/dowload-app.less";
+@import "blocks/page-footer.less";
+@import "blocks/photo-poster.less";
+@import "blocks/social__list.less";
