--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -14,3 +14,49 @@
   margin-top: 30px;
   margin-bottom: 25px;
 }
+
+.page-footer__copyright {
+  margin-top: 30px;
+}
+
+@media (min-width: @tabletwidth) {
+  .page-footer {
+    width: 620px;
+    min-height: 68px;
+    margin: 0 auto;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+  }
+  .page-footer__logo {
+    display: block;
+    margin: unset;
+  }
+
+  .page-footer__social {
+    margin: unset;
+  }
+  .page-footer__copyright {
+    margin-top: unset;
+  }
+}
+
+@media (min-width: @desktopwidth) {
+  .page-footer {
+    width: 920px;
+    min-height: 75px;
+    margin: 0 auto;
+    padding-top: 90px;
+    padding-bottom: 60px;
+    padding-left: 10px;
+    padding-right: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
