Bg for grids added

--- a/source/less/outlines.less
+++ b/source/less/outlines.less
@@ -19,20 +19,56 @@
 .page-footer__copyright { outline: purple 3px dashed };
 
 // фон
-body {
+.body-photo {
   background: #292929 url("../img/photo-mobile.jpg") no-repeat 50% 0;
   background-size: 320px auto;
   min-height: 750px;
 }
 @media (min-width: @tabletwidth) {
-  body {
+  .body-photo {
     background: #292929 url("../img/photo-tablet.jpg") no-repeat 50% 0;
     background-size: 660px auto;
   }
 }
 @media (min-width: @desktopwidth) {
-  body {
+  .body-photo {
     background: #292929 url("../img/photo-desktop.jpg") no-repeat 50% 0;
+    background-size: 1200px auto;
+  }
+}
+
+.body-index {
+  background: #292929 url("../img/index-mobile.jpg") no-repeat 50% 0;
+  background-size: 320px auto;
+  min-height: 750px;
+}
+@media (min-width: @tabletwidth) {
+  .body-index {
+    background: #292929 url("../img/index-tablet.jpg") no-repeat 50% 0;
+    background-size: 660px auto;
+  }
+}
+@media (min-width: @desktopwidth) {
+  .body-index {
+    background: #292929 url("../img/index-desktop.jpg") no-repeat 50% 0;
+    background-size: 1200px auto;
+  }
+}
+
+.body-form {
+  background: #292929 url("../img/form-mobile.jpg") no-repeat 50% 0;
+  background-size: 320px auto;
+  min-height: 750px;
+}
+@media (min-width: @tabletwidth) {
+  .body-form {
+    background: #292929 url("../img/form-tablet.jpg") no-repeat 50% 0;
+    background-size: 660px auto;
+  }
+}
+@media (min-width: @desktopwidth) {
+  .body-form {
+    background: #292929 url("../img/form-desktop.jpg") no-repeat 50% 0;
     background-size: 1200px auto;
   }
 }
