--- a/source/less/outlines.less
+++ b/source/less/outlines.less
@@ -17,6 +17,8 @@
 .page-footer__logo { outline: red 3px dotted; };
 .page-footer__social {outline: green 2px dashed };
 .page-footer__copyright { outline: purple 3px dashed };
+.form__title { outline: purple 3px dashed };
+.form__subtitle {outline: green 2px dashed };
 
 // фон
 .body-photo {
