--- a/source/less/style.less
+++ b/source/less/style.less
@@ -13,3 +13,4 @@
 @import "blocks/page-footer.less";
 @import "blocks/photo-poster.less";
 @import "blocks/social__list.less";
+@import "blocks/form.less";
