--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -97,6 +97,7 @@
     padding-right: 10px;
     align-items: flex-end;
     flex-wrap: wrap;
+    justify-content: space-around;
   }
 
   .advantages__item {
