--- a/source/less/outlines.less
+++ b/source/less/outlines.less
@@ -4,21 +4,21 @@
 .page-header__logo { outline: blue 3px solid; }
 .page-main { outline: red 3px dotted; }
 .welcome { outline: brown 2px dotted; }
-.advantages { outline: purple 3px dashed };
-.advantages__slogan {outline: green 2px dashed };
-.advantages__list { outline: hotpink 2px dotted};
-.advantages__item { outline: blue 2px solid};
-.user-photos { outline: brown 2px dotted; };
-.user-photos__title { outline: purple 3px dashed };
-.user-photos__subtitle {outline: green 2px dashed };
-.user-photos__list { outline: hotpink 2px dotted};
-.user-photos__item { outline: blue 2px solid};
-.page-footer { outline: yellow 3px solid; };
-.page-footer__logo { outline: red 3px dotted; };
-.page-footer__social {outline: green 2px dashed };
-.page-footer__copyright { outline: purple 3px dashed };
-.form__title { outline: purple 3px dashed };
-.form__subtitle {outline: green 2px dashed };
+.advantages { outline: purple 3px dashed; }
+.advantages__slogan {outline: green 2px dashed; }
+.advantages__list { outline: hotpink 2px dotted; }
+.advantages__item { outline: blue 2px solid; }
+.user-photos { outline: brown 2px dotted; }
+.user-photos__title { outline: purple 3px dashed; }
+.user-photos__subtitle {outline: green 2px dashed; }
+.user-photos__list { outline: hotpink 2px dotted; }
+.user-photos__item { outline: blue 2px solid; }
+.page-footer { outline: yellow 3px solid; }
+.page-footer__logo { outline: red 3px dotted; }
+.page-footer__social {outline: green 2px dashed; }
+.page-footer__copyright { outline: purple 3px dashed; }
+.form__title { outline: purple 3px dashed; }
+.form__subtitle {outline: green 2px dashed; }
 
 // фон
 .body-photo {
