--- a/source/less/blocks/user-photos.less
+++ b/source/less/blocks/user-photos.less
@@ -30,9 +30,11 @@
     width: 660px;
     min-height: 2640px;//grid-temp
   }
+
   .user-photos__title {
     min-height: 270px;//grid-temp
   }
+
   .user-photos__subtitle {
     min-height: 170px;//grid-temp
   }
@@ -77,18 +79,18 @@
   .user-photos__item {
     height: 455px;
     width: 300px; //grid-temp
-
   }
+
   .user-photos__item:not(:first-child) {
     margin-left: 20px;
     margin-top: 20px;
   }
+
   .user-photos__item:first-child {
     width: 100%;
     height: 630px;//grid-temp
     margin-bottom: 30px;
   }
-
 }
 
 @media (min-width: @desktopwidth) {
@@ -110,9 +112,8 @@
   .user-photos__item:first-child {
     width: 100%;
     height: 600px;//grid-temp
-    margin-bottom: 0px;
+    margin-bottom: 0;
   }
-
 }
 
 .user_photos__text {
