--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,5 +1,5 @@
 .page-header {
-  // background-color: @black;
+  background-color: #283645;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,6 +8,13 @@
 .page-header__logo {
   width: 320px;
   height: 69px;
+  margin-bottom: 1px;
+  box-shadow: 0px 1px 0 0 #000000, inset 0px 1px 0 0 rgba(255, 255, 255, 0.15);
+}
+
+.page-header__logo-image {
+  margin-top: 21px;
+  margin-left: 20px;
 }
 
 @media (min-width: @tabletwidth) {
@@ -28,3 +35,4 @@
     width: 230px;
   }
 }
+
