--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,10 +7,11 @@
 @import "blocks/advantages.less";
 @import "blocks/user-photos.less";
 @import "blocks/copyright.less";
-@import "outlines.less";
+// @import "outlines.less";
 @import "basis.less";
 @import "blocks/dowload-app.less";
 @import "blocks/page-footer.less";
 @import "blocks/photo-poster.less";
 @import "blocks/social__list.less";
 @import "blocks/form.less";
+@import "blocks/site-list.less";
