--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -18,10 +18,6 @@
   }
 }
 
-.main-nav__toggle {
-  position: absolute;
-}
-
 .main-nav__list,
 .main-nav__list a {
   font-size: 18px;
@@ -36,8 +32,17 @@
 }
 
 .main-nav__toggle {
+  position: absolute;
+  top: 21px;
+  right: 215px;
+  width: 25px;
+  height: 25px;
   color: @white;
   background-image: url("../../img/icon-menu-cross.svg");
   background-repeat: no-repeat;
-  // background-color: @black;  коммент для сетки
+  background-color: #283645;
+  border: none;
+
+
 }
+
