--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,11 +1,13 @@
 .page-header {
-  background-color: #283645;
+  background-color: #000000;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .page-header__logo {
+  position: relative;
+  background-color: #283645;
   width: 320px;
   height: 69px;
   margin-bottom: 1px;
