--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,6 +1,6 @@
 .main-nav {
+  position: relative;
   width: 320px;
-  min-height: 254px; //временно
 }
 
 @media (min-width: @tabletwidth) {
@@ -31,10 +31,10 @@
   color: @white;
 }
 
-.main-nav__toggle {
+.main-nav--opened .main-nav__toggle {
   position: absolute;
-  top: 21px;
-  right: 215px;
+  top: -50px;
+  right: 18px;
   width: 25px;
   height: 25px;
   color: @white;
@@ -42,7 +42,35 @@
   background-repeat: no-repeat;
   background-color: #283645;
   border: none;
-
-
 }
 
+.main-nav--closed .main-nav__toggle {
+  position: absolute;
+  top: -50px;
+  right: 18px;
+  width: 50px;
+  height: 25px;
+  color: @white;
+  background-image: url("../../img/icon-menu-burger.svg");
+  background-repeat: no-repeat;
+  background-color: rgba(40, 54, 69, 0.3);
+  border: none;
+}
+
+.main-nav--closed .site-list__item {
+  display: none;
+}
+
+.main-nav--opened {
+  position: absolute;
+  top: 70px;
+  background-color: #283645
+}
+
+.main-nav--opened .site-list__item {
+  display: block;
+}
+
+.main-nav--closed {
+  background-color: rgba(40, 54, 69, 0.3);
+}
