--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,17 +1,22 @@
 .page-header {
-  background-color: #000000;
+  position:absolute;
+  top: 0px;
+  left: 120px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .page-header__logo {
-  position: relative;
   background-color: #283645;
   width: 320px;
   height: 69px;
   margin-bottom: 1px;
   box-shadow: 0px 1px 0 0 #000000, inset 0px 1px 0 0 rgba(255, 255, 255, 0.15);
+}
+
+.page-header__logo--nav-closed {
+  background-color: rgba(40, 54, 69, 0.3);
 }
 
 .page-header__logo-image {
