--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -1,7 +1,8 @@
 .welcome {
   // background-color: @black; временно
-  //background-image: url("../../img/bg-back-mobile@1x.jpg"); временно
+  background-image: url("../../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
+  background-position: 0px -66px;
   width: 320px;
   margin: 0 auto;
   min-height: 667px; // временно для сетки
