--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -61,16 +61,18 @@
   display: none;
 }
 
-.main-nav--opened {
-  position: absolute;
-  top: 70px;
-  background-color: #283645
-}
+// .main-nav--opened {
+//   position: absolute;
+//   top: 70px;
+//   background-color: #283645
+// }
 
 .main-nav--opened .site-list__item {
   display: block;
+  background-color: #283645;
 }
 
 .main-nav--closed {
   background-color: rgba(40, 54, 69, 0.3);
 }
+
