--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,11 +1,17 @@
 .page-header {
-  position:absolute;
-  top: 0px;
-  left: 120px;
+  // position:relative;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
+.page-header {
+  margin-bottom: -67px;  //вставить переменную
+}
+// .page-header__wrapper {
+//   position: absolute;
+
+// }
 
 .page-header__logo {
   background-color: #283645;
@@ -15,8 +21,8 @@
   box-shadow: 0px 1px 0 0 #000000, inset 0px 1px 0 0 rgba(255, 255, 255, 0.15);
 }
 
-.page-header__logo--nav-closed {
-  background-color: rgba(40, 54, 69, 0.3);
+.page-header__logo--nav-opened {
+  background-color: #283645;
 }
 
 .page-header__logo-image {
