--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -2,7 +2,7 @@
   // background-color: @black; временно
   background-image: url("../../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: 0px -66px;
+  // background-position: 0px -66px;
   width: 320px;
   margin: 0 auto;
   min-height: 667px; // временно для сетки
