Header tablet finished

--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -8,9 +8,16 @@
   min-height: 667px; // временно для сетки
 }
 
+.welcome__slogan {
+  .intro-font;
+}
+
 @media (min-width: @tabletwidth) {
   .welcome {
     width: 660px;
+    background-image: url("../../img/bg-back-tablet@1x.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
     min-height: 620px; //временно для сетки
   }
 }
@@ -22,6 +29,4 @@
   }
 }
 
-.welcome__slogan {
-  .intro-font;
-}
+
