--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -3,21 +3,6 @@
   width: 320px;
 }
 
-@media (min-width: @tabletwidth) {
-  .main-nav {
-    min-height: 252px; //временно
-    width: 660px;
-  }
-}
-
-@media (min-width: @desktopwidth) {
-  .main-nav {
-    min-height: 110px; //временно
-    margin-left: 50px;
-    width: 720px;
-  }
-}
-
 .main-nav__list,
 .main-nav__list a {
   font-size: 18px;
@@ -31,13 +16,16 @@
   color: @white;
 }
 
-.main-nav--opened .main-nav__toggle {
+.main-nav__toggle {
   position: absolute;
   top: -50px;
   right: 18px;
-  width: 25px;
   height: 25px;
   color: @white;
+}
+
+.main-nav--opened .main-nav__toggle {
+  width: 25px;
   background-image: url("../../img/icon-menu-cross.svg");
   background-repeat: no-repeat;
   background-color: #283645;
@@ -45,12 +33,7 @@
 }
 
 .main-nav--closed .main-nav__toggle {
-  position: absolute;
-  top: -50px;
-  right: 18px;
   width: 50px;
-  height: 25px;
-  color: @white;
   background-image: url("../../img/icon-menu-burger.svg");
   background-repeat: no-repeat;
   background-color: rgba(40, 54, 69, 0.3);
@@ -76,3 +59,19 @@
   background-color: rgba(40, 54, 69, 0.3);
 }
 
+@media (min-width: @tabletwidth) {
+  .main-nav {
+    width: 660px;
+  }
+  .main-nav__toggle {
+    top: -66px;
+  }
+}
+
+@media (min-width: @desktopwidth) {
+  .main-nav {
+    min-height: 110px; //временно
+    margin-left: 50px;
+    width: 720px;
+  }
+}
