--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -31,6 +31,10 @@
 }
 
 @media (min-width: @tabletwidth) {
+  .page-header {
+    margin-bottom: -110px;  //вставить переменную
+  }
+
   .page-header__logo {
     width: 660px;
     height: 110px;
@@ -41,6 +45,7 @@
   .page-header {
     flex-direction: row;
     justify-content: center;
+
   }
 
   .page-header__logo {
