--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -28,6 +28,9 @@
 .page-header__logo-image {
   margin-top: 21px;
   margin-left: 20px;
+  width: 74px;
+  height: 22px;
+  background-image: url(../../img/logo-pink-white-mobile.svg);
 }
 
 @media (min-width: @tabletwidth) {
