--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -6,12 +6,8 @@
 }
 
 .page-header {
-  margin-bottom: -67px;  //вставить переменную
+  margin-bottom: -70px;  //вставить переменную
 }
-// .page-header__wrapper {
-//   position: absolute;
-
-// }
 
 .page-header__logo {
   background-color: #283645;
@@ -31,12 +27,21 @@
   width: 74px;
   height: 22px;
   background-image: url(../../img/logo-pink-white-mobile.svg);
+  background-repeat: no-repeat;
 }
 
 @media (min-width: @tabletwidth) {
   .page-header {
-    margin-bottom: -110px;  //вставить переменную
+    margin-bottom: -111px;  //вставить переменную
   }
+
+  .page-header__logo-image {
+  margin-top: 27px;
+  margin-left: 20px;
+  width: 146px;
+  height: 41px;
+  background-image: url(../../img/logo-pink-white-tablet.svg);
+}
 
   .page-header__logo {
     width: 660px;
