--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -1,8 +1,7 @@
 .welcome {
-  // background-color: @black; временно
   background-image: url("../../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  // background-position: 0px -66px;
+  background-position: center 0%;
   width: 320px;
   margin: 0 auto;
   min-height: 667px; // временно для сетки
@@ -16,7 +15,7 @@
   .welcome {
     width: 660px;
     background-image: url("../../img/bg-back-tablet@1x.jpg");
-    background-position: center;
+    background-position: center 0%;
     background-repeat: no-repeat;
     min-height: 620px; //временно для сетки
   }
