--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -63,6 +63,7 @@
   .main-nav {
     width: 660px;
   }
+
   .main-nav__toggle {
     top: -66px;
   }
@@ -73,5 +74,9 @@
     min-height: 110px; //временно
     margin-left: 50px;
     width: 720px;
+  }
+
+  .main-nav__toggle {
+    display: none;
   }
 }
