--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -24,6 +24,9 @@
 @media (min-width: @desktopwidth) {
   .welcome {
     width: 1200px;
+    background-image: url("../../img/bg-back-desktop@1x.jpg");
+    background-position: center 0%;
+    background-repeat: no-repeat;
     min-height: 743px; //временно для сетки
   }
 }
