Desktop heder aligned

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -61,6 +61,9 @@
     height: 110px;
     width: 230px;
   }
-
+  .page-header__logo-image {
+    margin-left: 30px;
+    background-image: url(../../img/logo-pink-white-desktop.svg), url(../../img/logo-pink-white-tablet.svg);
+  }
 }
 
