--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -20,11 +20,12 @@
 
 @media (min-width: @desktopwidth) {
   .site-list {
-  display: flex;
-  justify-content: space-between;
+    margin-top: 22px;
+    display: flex;
+    justify-content: space-between;
   }
   .site-list__item:first-child {
-    margin-left: 20px;
+    margin-left: 60px;
   }
 
   .site-list__item:last-child {
