--- a/source/less/basis.less
+++ b/source/less/basis.less
@@ -1,3 +1,24 @@
+@font-face {
+  font-weight: light;
+  font-family: "OpenSans";
+  font-style: light;
+  src: url("../fonts/OpenSanslight.woff2") format("woff2"), url("../fonts/OpenSanslight.woff") format("woff");
+}
+
+@font-face {
+  font-weight: normal;
+  font-family: "OpenSans";
+  font-style: normal;
+  src: url("../fonts/OpenSans.woff2") format("woff2"), url("../fonts/OpenSans.woff") format("woff");
+}
+
+@font-face {
+  font-weight: bold;
+  font-family: "OpenSans";
+  font-style: normal;
+  src: url("../fonts/OpenSansBold.woff2") format("woff2"), url("../fonts/OpenSans.woff") format("woff");
+}
+
 
 body {
   min-width: 320px;
