--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -5,10 +5,14 @@
   width: 320px;
   margin: 0 auto;
   min-height: 667px; // временно для сетки
+  padding-top: 95px;
 }
 
 .welcome__slogan {
   .intro-font;
+  margin: 0;
+  padding-right: 20px;
+  padding-left: 20px;
 }
 
 @media (min-width: @tabletwidth) {
