--- a/source/less/basis.less
+++ b/source/less/basis.less
@@ -1,7 +1,7 @@
 @font-face {
-  font-weight: light;
+  font-weight: lighter;
   font-family: "OpenSans";
-  font-style: light;
+  font-style: normal;
   src: url("../fonts/OpenSanslight.woff2") format("woff2"), url("../fonts/OpenSanslight.woff") format("woff");
 }
 
