--- a/source/less/blocks/dowload-app.less
+++ b/source/less/blocks/dowload-app.less
@@ -1,17 +1,22 @@
-// .download-app {
-//   // background-color: @black; временно
-// }
+.download-app {
+  background-color: @dark;
+  margin-top: -4px;
+  border-top: 1px solid  #283645;
+}
 
-// .download-app {
-//   // background-color: @black; временно
-// }
-
-.download-app__download {
+.download-app__download-button {
+  display: block;
+  width: 281px;
+  height: 55px;
   color: @white;
-  // background-color: @black; временно
   font-weight: bold;
   line-height: 1;
   text-align: center;
+  padding: 0;
+  background: none;
+  border: solid 3px #ffffff;
+  border-radius: 30px;
+  margin: 30px auto;
 }
 
 .download-app a {
