--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -5,7 +5,7 @@
   width: 320px;
   margin: 0 auto;
   min-height: 667px; // временно для сетки
-  padding-top: 95px;
+  padding-top: 90px;
 }
 
 .welcome__slogan {
@@ -13,6 +13,10 @@
   margin: 0;
   padding-right: 20px;
   padding-left: 20px;
+}
+
+.welcome__main-image {
+  margin-top: 20px;
 }
 
 @media (min-width: @tabletwidth) {
