Welcome tablet started

--- a/source/less/basis.less
+++ b/source/less/basis.less
@@ -2,7 +2,7 @@
   font-weight: lighter;
   font-family: "OpenSans";
   font-style: normal;
-  src: url("../fonts/OpenSanslight.woff2") format("woff2"), url("../fonts/OpenSanslight.woff") format("woff");
+  src: url("../fonts/OpenSansLight.woff2") format("woff2"), url("../fonts/OpenSansLight.woff") format("woff");
 }
 
 @font-face {
