--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -25,7 +25,16 @@
     background-position: center 0%;
     background-repeat: no-repeat;
     min-height: 620px; //временно для сетки
+    padding-top: 200px;
   }
+    .welcome__slogan {
+    width: 280px;
+    font-size: 40px;
+    text-align: center;
+    }
+    .welcome__main-image {
+      position: absolute;
+    }
 }
 
 @media (min-width: @desktopwidth) {
