Welcome tablet done

--- a/source/less/blocks/dowload-app.less
+++ b/source/less/blocks/dowload-app.less
@@ -55,3 +55,35 @@
   margin-right: 40px;
   padding-bottom: 32px;
 }
+
+@media (min-width: @tabletwidth) {
+  .download-app {
+    position: relative;
+    background: none;
+    border: none;
+    margin-top: -18px;
+  }
+
+  .download-app__download-button {
+    margin-left: 20px;
+    width: 300px;
+  }
+
+  .download-app__list {
+    width: 300px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 14px;
+  }
+  .download-app p {
+    padding-left: 22px;
+    padding-right: 22px;
+    width: 300px;
+    font-size: 18px;
+    line-height: 1.33;
+    font-weight: 300;
+    margin-top: 32px;
+    margin-left: 0;
+    padding-bottom: 110px;
+  }
+}
