--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -16,6 +16,9 @@
 
 .welcome__main-image {
   margin-top: 20px;
+  width: 258px;
+  height: 290px;
+  background: url(../../img/iphone-hand-mobile@1x.png) no-repeat;
 }
 
 @media (min-width: @tabletwidth) {
@@ -24,16 +27,20 @@
     background-image: url("../../img/bg-back-tablet@1x.jpg");
     background-position: center 0%;
     background-repeat: no-repeat;
-    min-height: 620px; //временно для сетки
     padding-top: 200px;
   }
     .welcome__slogan {
-    width: 280px;
+    width: 250px;
     font-size: 40px;
     text-align: center;
     }
     .welcome__main-image {
       position: absolute;
+      z-index: 0;
+      width: 660px;
+      height: 545px;
+      background: url(../../img/iphone-hand-tablet@1x.png) no-repeat -20px;
+      margin-top: -182px;
     }
 }
 
