Desktop welcome done

--- a/source/less/blocks/dowload-app.less
+++ b/source/less/blocks/dowload-app.less
@@ -75,6 +75,7 @@
     padding-right: 20px;
     padding-top: 14px;
   }
+
   .download-app p {
     padding-left: 22px;
     padding-right: 22px;
@@ -86,4 +87,23 @@
     margin-left: 0;
     padding-bottom: 110px;
   }
+}
+
+@media (min-width: @desktopwidth) {
+  .download-app {
+    position: relative;
+    padding-top: 47px;
+    margin-left: 110px;
+  }
+
+  .download-app__list {
+    width: 300px;
+    padding-top: 35px;
+  }
+
+  .download-app p {
+    margin-top: 51px;
+    padding-bottom: 122px;
+  }
+
 }
