--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -50,8 +50,24 @@
     background-image: url("../../img/bg-back-desktop@1x.jpg");
     background-position: center 0%;
     background-repeat: no-repeat;
-    min-height: 743px; //временно для сетки
+    padding-top: 220px;
   }
+  .welcome__slogan {
+    width: 300px;
+    font-size: 50px;
+    text-align: center;
+    margin-left: 115px; //пока не разобрался со шрифтом
+    line-height: unset; //пока не разобрался со шрифтом
+  }
+
+  .welcome__main-image {
+      position: absolute;
+      z-index: 0;
+      width: 1050px;
+      height: 645px;
+      background: url(../../img/iphone-hand-desktop@1x.png) no-repeat 146px;
+      margin-top: -182px;
+    }
 }
 
 
