--- a/source/less/blocks/dowload-app.less
+++ b/source/less/blocks/dowload-app.less
@@ -54,6 +54,7 @@
   margin-left: 40px;
   margin-right: 40px;
   padding-bottom: 32px;
+  margin-bottom: 0;
 }
 
 @media (min-width: @tabletwidth) {
