--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -20,6 +20,11 @@
   color: @black;
   font-size: 18px;
   line-height: 24px;
+  margin: 0;
+
+}
+
+.advantages__item:first-child .advantages__title {
   margin-top: 87px;
 }
 
