--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,5 +1,5 @@
 .advantages {
-  //background-color: @white; временно
+  background-color: @white;
   //min-height: 1010px;//временно для сетки
 }
 
@@ -10,10 +10,31 @@
   color: @dark;
   width: 260px;
   margin: 0 auto;
-  padding-top: 40px;
+  padding-top: 35px;
   padding-bottom: 30px;
   padding-left: 30px;
   padding-right: 30px;
+}
+
+.advantages__slogan--question,
+.advantages__slogan--answer {
+  display: block;
+}
+
+.advantages__slogan--answer {
+  margin-top: 25px;
+}
+
+.advantages__list {
+  .unstyle;
+  text-align: center;
+  margin: 0 auto;
+  padding: 0;
+  width: 280px;
+  min-height: 790px;//временно для сетки
+  background-color: @lightGrey;
+  display: flex;
+  flex-direction: column;
 }
 
 .advantages__title {
@@ -21,13 +42,31 @@
   font-size: 18px;
   line-height: 24px;
   margin: 0;
-
+  margin-bottom: 12px;
 }
 
-.advantages__item:first-child .advantages__title {
-  margin-top: 87px;
+.advantages__item {
+  width: 280px;//временно
+  font-size: 14px;
+  line-height: 24px;
+  color: @dark;
+      margin-bottom: 31px;
 }
 
+.advantages__item:first-child {
+  background: url(../../img/bg-triangle-white.svg) no-repeat top;
+  .advantages__title {
+    margin-top: 76px;
+  }
+}
+
+.advantages__item:last-child {
+  display: none;
+}
+
+.advantages__description {
+  margin: 0;
+}
 
 @media (min-width: @tabletwidth) {
   .advantages__slogan {
@@ -43,42 +82,7 @@
   }
 }
 
-.advantages__slogan--question,
-.advantages__slogan--answer {
-  display: block;
-}
 
-.advantages__slogan--answer {
-  margin-top: 30px;
-}
-
-.advantages__list {
-  .unstyle;
-  text-align: center;
-  margin: 0 auto;
-  padding: 0 20px;
-  width: 280px;
-  min-height: 790px;//временно для сетки
-  // background-image: url("../../img/bg-triangle-white.svg"); временно
-  // background-repeat: no-repeat;
-  // background-color: @lightGrey;
-  display: flex;
-  flex-direction: column;
-}
-
-.advantages__item:last-child {
-  display: none;
-}
-
-
-
-.advantages__item {
-  width: 280px;//временно
-  min-height: 130px; //временно для сетки
-  font-size: 14px;
-  line-height: 24px;
-  color: @dark;
-}
 
 @media (min-width: @tabletwidth) {
   .advantages__list {
