--- a/source/less/blocks/dowload-app.less
+++ b/source/less/blocks/dowload-app.less
@@ -19,6 +19,7 @@
   margin: 30px auto;
   letter-spacing: 2px;
 }
+
 .download-app__list {
   .unstyle;
   display: flex;
@@ -35,15 +36,15 @@
 }
 
 .download-app__apple {
-  background: url(../../img/logo-apple.svg) no-repeat center 1px;
+  background: url("../../img/logo-apple.svg") no-repeat center 1px;
 }
 
 .download-app__android {
-  background: url(../../img/logo-android.svg) no-repeat center 10px;
+  background: url("../../img/logo-android.svg") no-repeat center 10px;
 }
 
 .download-app__windows {
-  background: url(../../img/logo-microsoft.svg) no-repeat center 14px;
+  background: url("../../img/logo-microsoft.svg") no-repeat center 14px;
 }
 
 .download-app p {
@@ -106,5 +107,4 @@
     margin-top: 51px;
     padding-bottom: 122px;
   }
-
 }
