--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -18,7 +18,7 @@
   margin-top: 20px;
   width: 258px;
   height: 290px;
-  background: url(../../img/iphone-hand-mobile@1x.png) no-repeat;
+  background: url("../../img/iphone-hand-mobile@1x.png") no-repeat;
 }
 
 @media (min-width: @tabletwidth) {
@@ -29,19 +29,21 @@
     background-repeat: no-repeat;
     padding-top: 200px;
   }
-    .welcome__slogan {
+
+  .welcome__slogan {
     width: 250px;
     font-size: 40px;
     text-align: center;
-    }
-    .welcome__main-image {
-      position: absolute;
-      z-index: 0;
-      width: 660px;
-      height: 545px;
-      background: url(../../img/iphone-hand-tablet@1x.png) no-repeat -20px;
-      margin-top: -182px;
-    }
+  }
+
+  .welcome__main-image {
+    position: absolute;
+    z-index: 0;
+    width: 660px;
+    height: 545px;
+    background: url("../../img/iphone-hand-tablet@1x.png") no-repeat -20px;
+    margin-top: -182px;
+  }
 }
 
 @media (min-width: @desktopwidth) {
@@ -52,6 +54,7 @@
     background-repeat: no-repeat;
     padding-top: 220px;
   }
+
   .welcome__slogan {
     width: 300px;
     font-size: 50px;
@@ -61,11 +64,11 @@
   }
 
   .welcome__main-image {
-      position: absolute;
-      z-index: 0;
-      width: 1050px;
-      height: 645px;
-      background: url(../../img/iphone-hand-desktop@1x.png) no-repeat 146px;
-      margin-top: -182px;
-    }
+    position: absolute;
+    z-index: 0;
+    width: 1050px;
+    height: 645px;
+    background: url("../../img/iphone-hand-desktop@1x.png") no-repeat 146px;
+    margin-top: -182px;
+  }
 }
