--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -31,7 +31,7 @@
   margin: 0 auto;
   padding: 0;
   width: 320px;
-  background: url(../../img/bg-triangle-white.svg) no-repeat top @lightGrey;
+  background: url("../../img/bg-triangle-white.svg") no-repeat top @lightGrey;
   display: flex;
   flex-direction: column;
 }
@@ -54,13 +54,15 @@
 }
 
 .advantages__item:first-child {
-  background: url(../../img/bg-triangle-white.svg) no-repeat top;
+  background: url("../../img/bg-triangle-white.svg") no-repeat top;
+
   .advantages__title {
     margin-top: 97px;
   }
 }
+
 .advantages__item:last-child {
-  padding-bottom: 287px;;
+  padding-bottom: 287px;
 }
 
 .advantages__item:last-child::after {
@@ -70,7 +72,7 @@
   margin-top: 40px;
   width: 160px;
   height: 278px;
-  background: url(../../img/iphone-screen-mobile@1x.png) no-repeat;
+  background: url("../../img/iphone-screen-mobile@1x.png") no-repeat;
 }
 
 .advantages__description {
@@ -94,8 +96,6 @@
     min-height: 255px;// для сетки
   }
 }
-
-
 
 @media (min-width: @tabletwidth) {
   .advantages__list {
