--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -3,19 +3,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: -70px;
 }
-
-.page-header {
-  margin-bottom: -70px;  //вставить переменную
-}
-
 
 .page-header__logo {
   background-color: #283645;
   width: 320px;
   height: 69px;
   margin-bottom: 1px;
-  box-shadow: 0px 1px 0 0 #000000, inset 0px 1px 0 0 rgba(255, 255, 255, 0.15);
+  box-shadow: 0 1px 0 0 #000000, inset 0 1px 0 0 rgba(255, 255, 255, 0.15);
 }
 
 .page-header__logo--nav-opened {
@@ -27,7 +23,7 @@
   margin-left: 20px;
   width: 74px;
   height: 22px;
-  background-image: url(../../img/logo-pink-white-mobile.svg);
+  background-image: url("../../img/logo-pink-white-mobile.svg");
   background-repeat: no-repeat;
 }
 
@@ -37,12 +33,12 @@
   }
 
   .page-header__logo-image {
-  margin-top: 27px;
-  margin-left: 20px;
-  width: 146px;
-  height: 41px;
-  background-image: url(../../img/logo-pink-white-tablet.svg);
-}
+    margin-top: 27px;
+    margin-left: 20px;
+    width: 146px;
+    height: 41px;
+    background-image: url("../../img/logo-pink-white-tablet.svg");
+  }
 
   .page-header__logo {
     width: 660px;
@@ -54,15 +50,15 @@
   .page-header {
     flex-direction: row;
     justify-content: center;
-
   }
 
   .page-header__logo {
     height: 110px;
     width: 230px;
   }
+
   .page-header__logo-image {
     margin-left: 30px;
-    background-image: url(../../img/logo-pink-white-desktop.svg), url(../../img/logo-pink-white-tablet.svg);
+    background-image: url("../../img/logo-pink-white-desktop.svg"), url("../../img/logo-pink-white-tablet.svg");
   }
 }
