--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -6,7 +6,7 @@
 .site-list__item {
   text-align: center;
   margin-bottom: 1px;
-  box-shadow: 0px 1px 0 0 #000000, inset 0px 1px 0 0 rgba(255, 255, 255, 0.15);
+  box-shadow: 0 1px 0 0 #000000, inset 0 1px 0 0 rgba(255, 255, 255, 0.15);
 }
 
 .site-list__item a {
@@ -24,6 +24,7 @@
     display: flex;
     justify-content: space-between;
   }
+
   .site-list__item:first-child {
     margin-left: 60px;
   }
