--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -8,7 +8,7 @@
 }
 
 .intro-font() {
-  font-family: OpenSans;
+  font-family: "OpenSans";
   font-size: 24px;
   font-weight: 300;
   line-height: normal;
