Advantages Subtitle tablet span

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -143,6 +143,7 @@
     display: block;
     width: 600px;
     margin: 0 auto;
+
     b {
       display: block;
       font-size: 30px;
@@ -150,8 +151,18 @@
       margin-left: 300px;
       margin-top: 98px;
     }
+
     a {
       display: block;
+      color: @lipstick;
+    }
+
+    span {
+      display: block;
+      font-size: 14px;
+      margin-left: 300px;
+      margin-top: 12px;
+      line-height: 24px;
     }
   }
 }
