--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -141,26 +141,30 @@
 
   .advantages__subtitle {
     display: block;
-    width: 600px;
+    width: 660px;
     margin: 0 auto;
 
     b {
       display: block;
       font-size: 30px;
       width: 170px;
-      margin-left: 300px;
+      margin-left: 330px;
       margin-top: 98px;
     }
 
     a {
       display: block;
       color: @lipstick;
+      margin-left: 330px;
+      margin-top: 10px;
+      line-height: 24px;
+      font-size: 14px;
     }
 
     span {
       display: block;
       font-size: 14px;
-      margin-left: 300px;
+      margin-left: 328px;
       margin-top: 12px;
       line-height: 24px;
     }
