Timer Svg problem

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -143,6 +143,7 @@
     display: block;
     width: 660px;
     margin: 0 auto;
+    position: relative;
 
     b {
       display: block;
@@ -167,6 +168,15 @@
       margin-left: 328px;
       margin-top: 12px;
       line-height: 24px;
+    }
+
+    svg {
+      position: absolute;
+      top: 59px;
+      left: 21px;
+      width: 238px;
+      height: 275px;
+      fill: @lipstick;
     }
   }
 }
