--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -19,6 +19,10 @@
   margin-top: 30px;
 }
 
+.page-footer--hide {
+  display: none;
+}
+
 @media (min-width: @tabletwidth) {
   .page-footer {
     width: 620px;
@@ -60,8 +64,10 @@
     justify-content: space-between;
     align-items: center;
   }
+
+  .page-footer--hide {
+    display: block;
+}
 }
 
-.page-footer--hide {
-  display: none;
-}
+
