--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -98,7 +98,6 @@
   }
 
   .advantages__slogan--answer {
-    margin-top: 0;
     padding-left: 100px;
     padding-right: 100px;
     margin-top: -10px; //пока не разобрался со шрифтом
@@ -111,12 +110,12 @@
   }
 
   .advantages__item:first-child {
-  background: url("../../img/bg-triangle-white.svg") no-repeat 100% top;
+    background: url("../../img/bg-triangle-white.svg") no-repeat 100% top;
   }
 
   .advantages__item {
-    width: 310px;//временно
-    margin-bottom: 34px;;
+    width: 310px;
+    margin-bottom: 34px;
   }
 
   .advantages__item:first-child .advantages__title {
