--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -181,25 +181,41 @@
 }
 
 @media (min-width: @desktopwidth) {
+
+  .advantages {
+    width: 1200px;
+    margin: 0 auto;
+  }
+
   .advantages__slogan {
     width: 1140px;
-    min-height: 255px;// для сетки
+    font-size: 50px;
+    padding-top: 40px;
+  }
+
+  .advantages__slogan--answer {
+    padding-left: 220px;
+    padding-right: 220px;
+    margin-top: -10px; //пока не разобрался со шрифтом
   }
 
   .advantages__list {
-    width: 940px;//временно
-    min-height: 1050px; //временно для сетки
+    width: 1200px;
+    margin-top: 60px;
     flex-direction: row;
-    padding-left: 10px;
-    padding-right: 10px;
     align-items: flex-end;
     flex-wrap: wrap;
     justify-content: space-around;
+    background-color: @lightGrey;
   }
 
   .advantages__item {
+
     width: 270px;//временно
-    min-height: 230px; //временно для сетки
+   }
+
+  .advantages__item:first-child {
+    background: url("../../img/bg-triangle-white.svg") no-repeat 100% 20px;
   }
 
   .advantages__item:last-child {
