Features desktop done

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -207,6 +207,8 @@
 
     width: 270px;//временно
     position: relative;
+    padding-top: 10px;
+    margin-bottom: 24px;
    }
 
   .advantages__item:first-child {
@@ -222,6 +224,8 @@
   .advantages__title {
     margin: 0;
     padding: 0;
+    padding-left: 15px;
+    padding-right: 15px;
     margin-top: 345px;
     font-size: 30px;
     line-height: 30px;
@@ -235,6 +239,8 @@
     font-size: 18px;
     line-height: 30px;
     text-align: center;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 
   .advantages__item:first-child::after {
@@ -242,7 +248,7 @@
     position: absolute;
     width: 265px;
     height: 302px;
-    margin-top: -553px;
+    margin-top: -563px;
     margin-left: -21px;
     background: url("../../img/iphone-screen-1-desktop@1x.png") no-repeat;
   }
@@ -252,7 +258,7 @@
     position: absolute;
     width: 265px;
     height: 302px;
-    margin-top: -553px;
+    margin-top: -563px;
     margin-left: -8px;
     background: url("../../img/iphone-screen-2-desktop@1x.png") no-repeat;
   }
@@ -263,7 +269,7 @@
     width: 265px;
     height: 302px;
     margin: 0;
-    margin-top: -553px;
+    margin-top: -563px;
     background: url("../../img/iphone-screen-3-desktop@1x.png") no-repeat;
   }
 
