Timer-desktop done

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -313,4 +313,32 @@
       fill: #dedede;
     }
   }
+
+  .advantages__subtitle::after {
+    z-index: 2;
+    position: absolute;
+    content: "";
+    left: 153px;
+    bottom: 90px;
+    width: 219px;
+    height: 218px;
+    font-size: 120px;
+    font-weight: bold;
+    color: #d22856;
+    border: 17px solid #d22856;
+    border-radius: 50%;
+  }
+
+  .advantages__subtitle::before {
+    z-index: 2;
+    position: absolute;
+    content: "24";
+    left: 210px;
+    bottom: 172px;
+    width: 120px;
+    height: 120px;
+    font-size: 120px;
+    font-weight: bold;
+    color: #d22856;
+  }
 }
