--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -169,8 +169,36 @@
       left: 21px;
       width: 238px;
       height: 275px;
-      fill: @lipstick;
+      fill: #dedede;
     }
+  }
+
+  .advantages__subtitle::after {
+    z-index: 2;
+    position: absolute;
+    content: "";
+    left: 38px;
+    bottom: -9px;
+    width: 176px;
+    height: 176px;
+    font-size: 120px;
+    font-weight: bold;
+    color: #d22856;
+    border: 14px solid #d22856;
+    border-radius: 50%;
+  }
+
+  .advantages__subtitle::before {
+    z-index: 2;
+    position: absolute;
+    content: "24";
+    left: 85px;
+    bottom: 53px;
+    width: 100px;
+    height: 100px;
+    font-size: 96px;
+    font-weight: bold;
+    color: #d22856;
   }
 }
 
