--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -16,20 +16,66 @@
 }
 
 .page-footer__copyright {
+  display: flex;
+  justify-content: stretch;
   margin-top: 30px;
+}
+
+.page-footer__copyright a {
+  display: block;
+  width: 40px;
+  height: 40px;
+  margin-top: 25px;
 }
 
 .page-footer--hide {
   display: none;
 }
 
+.page-footer a {
+  .unstyle
+}
+
+.social__list {
+  display: flex;
+  padding: 0;
+}
+
+.social__link svg {
+  fill: @lipstick;
+}
+
+.social__link--twitter svg {
+  margin-top: 38%;
+  margin-left: 35%;
+}
+
+.social__link--facebook svg {
+  margin-top: 33%;
+  margin-left: 42%;
+}
+
+.social__link--youtube svg {
+  margin-top: 38%;
+  margin-left: 41%;
+}
+
+.copyright__text {
+  margin-right: -2px;
+  margin-top: 35px;
+}
+
+.copyright__image path {
+  fill: @lipstick;
+}
+
 @media (min-width: @tabletwidth) {
   .page-footer {
     width: 620px;
-    min-height: 68px;
+    min-height: 70px;
     margin: 0 auto;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 20px;
+    padding-bottom: 37px;
     padding-left: 20px;
     padding-right: 20px;
     display: flex;
@@ -44,6 +90,26 @@
 
   .page-footer__social {
     margin: unset;
+    margin-left: -14px;
+    margin-top: 15px;
+  }
+
+  .social__link {
+    position: relative;
+    display: block;
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+  }
+
+  .social__link::before {
+    position: absolute;
+    content: "";
+    width: 46px;
+    height: 46px;
+    opacity: 0.1;
+    border: solid 3px @dark;
+    border-radius: 50%;
   }
 
   .page-footer__copyright {
