--- a/source/less/style.less
+++ b/source/less/style.less
@@ -15,3 +15,4 @@
 @import "blocks/social__list.less";
 @import "blocks/form.less";
 @import "blocks/site-list.less";
+@import "blocks/contacts.less";
