--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -3,3 +3,9 @@
     min-height: 1286px; //temp
   }
 }
+
+@media (min-width: @desktopwidth) {
+  .contacts {
+    min-height: 1573px; //temp
+  }
+}
