--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,28 +1,36 @@
 .form {
   width: 320px;
-  min-height: 2400px;//grid-temp
+  min-height: 2472px;//grid-temp
   margin: 0 auto;
-  //background-image: url("../../img/bg-back-mobile@1x.jpg"); //disabled for grid
-  //background-repeat: no-repeat;
 }
 
 .form__title {
   .intro-font;
+  background-image: url("../../img/bg-back-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: center 0%;
+  //width: 320px;
+  margin: 0 auto;
   min-height: 110px;//grid-temp
+  padding-top: 100px;
+  padding-bottom: 30px;
 }
 
 .form__title,
 .form__subtitle {
-  padding-top: 30px;
-  padding-bottom: 30px;
   padding-left: 20px;
   padding-right: 20px;
   margin: 0;
 }
 
 .form__subtitle {
+  padding-top: 46px;
   .subtitle-font;
-  min-height: 125px;//grid-temp
+  padding-bottom: 30px;
+}
+
+.form__subtitle--short {
+  display: none;
 }
 
 @media (min-width: @tabletwidth) {
