--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -19,8 +19,8 @@
 
 .page-footer__copyright {
   display: flex;
-  justify-content: stretch;
-  margin-top: 30px;
+  justify-content: center;
+  margin-top: 12px;
 }
 
 .page-footer__copyright a {
@@ -64,7 +64,7 @@
 }
 
 .copyright__text {
-  margin-right: -2px;
+  margin-right: 10px;
   margin-top: 35px;
 }
 
@@ -116,7 +116,13 @@
   }
 
   .page-footer__copyright {
+    justify-content: stretch;
     margin-top: unset;
+  }
+
+  .copyright__text {
+  margin-right: -2px;
+  margin-top: 35px;
   }
 }
 
@@ -136,5 +142,14 @@
 
   .page-footer--hide {
     display: flex;
+  }
+
+  .page-footer__copyright {
+    justify-content: stretch;
+  }
+
+  .copyright__text {
+  margin-right: -2px;
+  margin-top: 35px;
   }
 }
